# Artistic-Code

./: .gitignore  CMakeLists.txt  README.md  version.h  version.h.in
DesignPattern/BehaviorPattern/: CMakeLists.txt
DesignPattern/BehaviorPattern/ChainOfResponsibility/: CMakeLists.txt  main.cpp
DesignPattern/BehaviorPattern/ChainOfResponsibility/LeaveApproval/: CMakeLists.txt  leader.h  main.cpp
DesignPattern/BehaviorPattern/ChainOfResponsibility/Simple/: CMakeLists.txt
DesignPattern/BehaviorPattern/Command/: CMakeLists.txt  main.cpp
DesignPattern/BehaviorPattern/Command/Simple/: CMakeLists.txt
DesignPattern/BehaviorPattern/Command/Undo/: CMakeLists.txt  command.h  main.cpp
DesignPattern/BehaviorPattern/Interpreter/: CMakeLists.txt  main.cpp
DesignPattern/BehaviorPattern/Interpreter/Simple/: CMakeLists.txt
DesignPattern/BehaviorPattern/Interpreter/Syllable/: CMakeLists.txt  abstractExpression.h  main.cpp
DesignPattern/BehaviorPattern/Iterator/: CMakeLists.txt  main.cpp
DesignPattern/BehaviorPattern/Mediator/: CMakeLists.txt  main.cpp
DesignPattern/BehaviorPattern/Mediator/LineEdit/: CMakeLists.txt  concreteColleague.h  concreteMediator.h  main.cpp  mediator.h  (+1 more)
DesignPattern/BehaviorPattern/Memento/: CMakeLists.txt  main.cpp
DesignPattern/BehaviorPattern/Observer/: CMakeLists.txt
DesignPattern/BehaviorPattern/State/: CMakeLists.txt
DesignPattern/BehaviorPattern/Strategy/: CMakeLists.txt  main.cpp
DesignPattern/BehaviorPattern/TemplateMethod/: CMakeLists.txt  templateMethod.cpp
DesignPattern/BehaviorPattern/Visitor/: CMakeLists.txt
(+184 files in other folders)
