ADD_SUBDIRECTORY(Strategy)
ADD_SUBDIRECTORY(TemplateMethod)
ADD_SUBDIRECTORY(Observer)
ADD_SUBDIRECTORY(Mediator)
ADD_SUBDIRECTORY(Memento)
ADD_SUBDIRECTORY(State)
ADD_SUBDIRECTORY(Iterator)
ADD_SUBDIRECTORY(ChainOfResponsibility)
ADD_SUBDIRECTORY(Command)
ADD_SUBDIRECTORY(Visitor)
ADD_SUBDIRECTORY(Interpreter)